--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+eureka.client.service-url.defaultZone=http://localhost:9090/eureka
