--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 
+insurnace.provider.url=http://localhost:9999/myservice/hello
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
