--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,9 @@
 
 insurnace.provider.url=http://localhost:9999/myservice/hello
+
+zuul.routes.products.path = /myservice/hello
+zuul.routes.products.url = http://localhost:9999
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
