--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 
-insurnace.provider.url=http://localhost:9999/myservice/hello
+insurnace.provider.url=http://localhost:9999/myservice
 
 zuul.routes.products.path = /myservice/hello
 zuul.routes.products.url = http://localhost:9999
